--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "birthday-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ShivamZenith.github.io/<birthday-website>",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
@@ -11,6 +12,7 @@
     "ajv-keywords": "^5.1.0",
     "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.23.12",
+    "gh-pages": "^6.3.0",
     "react": "^19.1.1",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.1.1",
@@ -28,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
