Prepare for GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "birthday-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ShivamZenith.github.io/<birthday-website>",
+  "homepage": "https://ShivamZenith.github.io/birthday-website",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
